--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <img class="mountain" src="images/mountain.png" alt="mountain">
     <img class="cloud2" src="images/cloud.png" alt="cloud">
   </div>
-     <img class="our-logo" src="images/logo.jpg" alt="company logo">
+     <img class="our-logo" src="images/Logo.jpg" alt="company logo">
   <div class="middle-container">
     <div class="Profile">
     <img class="face" src="images/happy-face.png" alt="face">
