--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>Haris Ahamed</title>
   <link rel="stylesheet" href="CSS/css styles/style.css">
-  <link rel="icon" href="images/logo d.jpg">
+  <link rel="icon" href="images/Logo d.jpg">
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Sacramento&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Dongle:wght@300&family=Merriweather:wght@300&family=Sacramento&display=swap" rel="stylesheet">
 </head>
