--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>Haris Ahamed</title>
-  <link rel="stylesheet" href="CSS/css styles/style.css">
-  <link rel="icon" href="images/Logo d.jpg">
+  <link rel="stylesheet" href="css styles/style.css">
+  <link rel="icon" href="images/logo d.jpg">
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Sacramento&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Dongle:wght@300&family=Merriweather:wght@300&family=Sacramento&display=swap" rel="stylesheet">
 </head>
@@ -18,7 +18,9 @@
     <img class="mountain" src="images/mountain.png" alt="mountain">
     <img class="cloud2" src="images/cloud.png" alt="cloud">
   </div>
-     <img class="our-logo" src="images/Logo.jpg" alt="company logo">
+     <img class="our-logo" src="images/logo.jpg" alt="company logo">
+
+  </div>
   <div class="middle-container">
     <div class="Profile">
     <img class="face" src="images/happy-face.png" alt="face">
